--- a/views/pages/front-page.twig
+++ b/views/pages/front-page.twig
@@ -15,6 +15,14 @@
       </div>
 
       <div id="svelte-counter"></div>
+
+      <div class="front-page__image-wrapper">
+        <img
+          src="{{ theme.link }}/public/images/placeholder.jpg"
+          alt="Featured image"
+          class="front-page__image"
+        >
+      </div>
     </div>
   </main>
 {% endblock %}
