--- a/views/pages/front-page.twig
+++ b/views/pages/front-page.twig
@@ -1,7 +1,7 @@
 {% extends "layouts/base.twig" %}
 
 {% block content %}
-  <main class="front-page">
+  <div class="front-page">
     <div class="front-page__content">
       <h1 class="front-page__title">{{ theme_name }}</h1>
 
@@ -24,5 +24,5 @@
         >
       </div>
     </div>
-  </main>
+  </div>
 {% endblock %}
