Refactor project to transition from Svelte to Vue
- Removed Svelte-related configurations and dependencies from eslint.config.js, package.json, and package-lock.json.
- Updated TypeScript configuration to include Vue files instead of Svelte.
- Replaced Svelte plugin with Vue plugin in vite.config.js.
- Deleted Svelte components and tests, including Counter and ErrorBoundary, to streamline the codebase.
- Adjusted front-page.twig to mount the Vue component instead of the Svelte component.

--- a/views/pages/front-page.twig
+++ b/views/pages/front-page.twig
@@ -14,7 +14,7 @@
         </div>
       </div>
 
-      <div id="svelte-counter"></div>
+      <div id="vue-counter"></div>
     </div>
   </div>
 {% endblock %}
