--- a/views/pages/front-page.twig
+++ b/views/pages/front-page.twig
@@ -14,7 +14,15 @@
         </div>
       </div>
 
-      <div id="vue-counter"></div>
+      <h2 class="front-page__section-title">Component Loading Comparison</h2>
+
+      <div class="front-page__counters">
+        <div class="front-page__counter-section">
+          <h3 class="front-page__counter-label">Eager Loaded (Main Bundle)</h3>
+          <p class="front-page__counter-description">Loaded immediately with main JavaScript bundle</p>
+          <div id="counter-eager"></div>
+        </div>
+      </div>
     </div>
   </div>
 {% endblock %}
